packages/survey-core/src/default-theme/blocks/sd-table.scss
/* ... */
.sd-question--disabled .sd-table__cell {
  opacity: 0.25;
}

.sd-root--readonly .sd-question--disabled .sd-table__cell {
  opacity: 1;
}

.sd-table__cell--header .sv-vue-title-additional-div,
.sd-table__cell--header {
  font-size: 0;
  line-height: 0;
}

.sd-table__cell--header {
  span {
    font-size: $font-editorfont-size;
    line-height: multiply(1.5, $font-editorfont-size);
    font-weight: $font-questiontitle-weight;
  }
}

.sd-table__cell--header {
  font-weight: 600;
  color: $font-questiontitle-color;
  vertical-align: top;
  padding: var(--sjs2-spacing-x150) var(--sjs2-spacing-x100);

  &:not(.sd-table__cell--empty) {
    min-width: var(--sjs2-size-x1500);
  }
}

.sd-matrixdropdown .sd-table__cell--header.sd-table__cell--empty {
  min-width: var(--sjs2-size-x1500);
}

.sd-matrixdropdown .sd-table__cell--header.sd-table__cell--action {
  min-width: var(--sjs2-size-x300);
  width: var(--sjs2-size-x300);
}

.sd-matrixdropdown .sd-table__cell--header:not(.sd-table__cell--empty) {
  min-width: var(--sjs2-size-x1500);

  &.sd-table__cell--dropdown,
  &.sd-table__cell--rating {
    min-width: calc(var(--sjs2-base-unit-size) * 22);
  }

  &.sd-table__cell--boolean {
    min-width: calc(var(--sjs2-base-unit-size) * 18);
  }
}

.sd-table__cell--footer {
  text-align: end;
  padding-top: var(--sjs2-spacing-x100);
}

.sd-table__cell--footer-total {
  font-weight: 600;
  text-align: start;
}

.sd-table__cell--detail-panel {
  border-top: calc(var(--sjs2-base-unit-border-width) * 8) solid transparent;
  padding: var(--sjs2-spacing-x400) var(--sjs2-spacing-x100);
  border-bottom: calc(var(--sjs2-base-unit-border-width) * 8) solid transparent;
  .sd-panel__content {
    padding: 0;
  }
}

.sd-table__cell--actions,
.sd-matrixdynamic__add-btn {
  .sd-action-bar {
    overflow: visible;
  }
}

.sd-table__cell--actions:not(.sd-table__cell--vertical) {
  width: var(--sjs2-size-x100);

  &:not(.sd-table__cell--drag):first-of-type {
    padding-left: 0;
    width: var(--sjs2-size-x400);
    min-width: var(--sjs2-size-x400);
  }
}

.sd-table__cell--actions {
  white-space: nowrap;

  &.sd-table__cell--vertical .sd-action-bar {
    justify-content: center;
  }
}

.sd-table__cell--row-text {
  font-weight: $font-questiontitle-weight;
  color: $font-questiontitle-color;
  text-align: start;
  min-width: var(--sjs2-size-x1200);
  padding: var(--sjs2-spacing-x150) var(--sjs2-spacing-x100);
}

.sd-matrix__question-wrapper {
  position: relative;
}

.sd-table__question-wrapper:not(:focus-within):hover {
  position: relative;
}

.sd-table__cell--actions:not(.sd-table__cell--vertical),
.sd-table__cell--empty,
.sd-table__cell--row-text,
.sd-table__cell--footer-total,
.sd-matrix__cell:first-of-type,
.sd-matrix tr > td:first-of-type {
  position: sticky;
  background: var(--sd-table-sticky-background-color);
  z-index: 12;

  &:first-of-type {
    left: var(--sjs2-spacing-negative-x100);
  }

  &:last-of-type {
    right: var(--sjs2-spacing-negative-x100);
  }
}

.sd-table__cell--actions:not(.sd-table__cell--vertical):last-child {
  .sd-action-bar {
    margin-right: var(--sjs2-spacing-negative-x300);
    justify-content: flex-end;
    background: var(--sd-table-sticky-background-color);
  }
}

.sd-question.sd-question--table {
  position: relative;
  // overflow-x: auto;
  &>.sd-question__container {
    &>.sd-question__header-and-content-container {
      .sd-question__header {
        position: sticky;
        left: 0;
      }
      overflow-x: auto;
    }
  }
}

.sd-question--table.sd-element--collapsed,
.sd-question--table.sd-element--nested {
  // overflow-x: visible;
  &>.sd-question__container {
    &>.sd-question__header-and-content-container {
      overflow-x: visible;
    }
  }
}

// TODO: Discuss with team if we need to keep this or not.
.sd-panel:not(.sd-panel--as-page) > .sd-panel__content > .sd-row:first-of-type {
  .sd-question--table.sd-element--nested {
    &>.sd-question__container {
      &>.sd-question__header-and-content-container {
        &>.sd-question__content:first-child {
          .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
            margin-top: var(--sjs2-spacing-negative-x300);
          }
        }
      }
    }
  }
}
.sd-panel:not(.sd-panel--as-page) > .sd-panel__content > .sd-row:not(:first-of-type) {
  .sd-question--table.sd-element--nested {
    &>.sd-question__container {
      &>.sd-question__header-and-content-container {
        &>.sd-question__content:first-child {
          .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
            margin-top: var(--sjs2-spacing-negative-x200);
          }
        }
      }
    }
  }
}

.sd-table-wrapper {
  display: flex;
  margin: 0 calc(-1 * var(--sd-base-padding));
  width: fit-content;
  min-width: calc(100% + 2 * var(--sd-base-padding));

  &:before,
  &:after {
    content: "";
    display: block;
    position: sticky;
    min-height: 100%;
    width: calc(var(--sd-base-padding) - var(--sjs2-spacing-x100));
    flex-shrink: 0;
    background: var(--sd-table-sticky-background-color);
    z-index: 11;
  }

  &::before {
    left: calc(-1 * var(--sd-base-padding));
  }

  &:after {
    right: calc(-1 * var(--sd-base-padding));
  }

  & > * {
    flex-basis: 100%;
  }
}

.sd-table-wrapper--left {
  margin-left: var(--sjs2-spacing-negative-x300);
  min-width: calc(100% + 1 * var(--sd-base-padding));
  &::before {
    left: var(--sjs2-spacing-negative-x300);
    width: var(--sjs2-size-x200);
  }
}
/* ... */

